Add Android host and ship 0.3.0.
Both hosts share save slots; Android is landscape with draggable pads.
Fix GC and audio drain so long play stays stable.

Co-authored-by: Cursor <cursoragent@cursor.com>