@@ -1,8 +1,9 @@
-package nes.host;
+package nes.save;
 
 import java.io.DataInputStream;
 import java.io.DataOutputStream;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Instant;
@@ -12,21 +13,21 @@ import java.time.format.DateTimeFormatter;
 /**
  * 槽位文件。Host 不拆 NES 快照，只包一层时间与缩略图。
  */
-final class SaveStore {
-    static final int DEFAULT_SLOTS = 10;
-    static final int MIN_SLOTS = 1;
-    static final int MAX_SLOTS = 30;
+public final class SaveStore {
+    public static final int DEFAULT_SLOTS = 10;
+    public static final int MIN_SLOTS = 1;
+    public static final int MAX_SLOTS = 30;
     private static final int MAGIC = 0x534C4F54;
     private static final int VERSION = 1;
     private static final DateTimeFormatter TIME =
             DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm").withZone(ZoneId.systemDefault());
 
-    static Path root = Path.of("saves");
+    public static Path root = Path.of("saves");
 
     private SaveStore() {}
 
     /** jpackage 启动时工作目录不可靠，存档跟 exe 放一起。 */
-    static void bindAppDir() {
+    public static void bindAppDir() {
         String launcher = System.getProperty("jpackage.app-path");
         if (launcher == null || launcher.isBlank()) {
             return;
@@ -34,30 +35,34 @@ final class SaveStore {
         root = Path.of(launcher).toAbsolutePath().getParent().resolve("saves");
     }
 
-    static int slotLimit() {
+    public static void bindDir(Path dir) {
+        root = dir;
+    }
+
+    public static int slotLimit() {
         Path file = root.resolve("slot-limit.txt");
         if (!Files.isRegularFile(file)) {
             return DEFAULT_SLOTS;
         }
         try {
-            int n = Integer.parseInt(Files.readString(file).trim());
+            int n = Integer.parseInt(new String(Files.readAllBytes(file), StandardCharsets.UTF_8).trim());
             return Math.max(MIN_SLOTS, Math.min(MAX_SLOTS, n));
         } catch (Exception e) {
             return DEFAULT_SLOTS;
         }
     }
 
-    static void setSlotLimit(int n) {
+    public static void setSlotLimit(int n) {
         n = Math.max(MIN_SLOTS, Math.min(MAX_SLOTS, n));
         try {
             Files.createDirectories(root);
-            Files.writeString(root.resolve("slot-limit.txt"), Integer.toString(n));
+            Files.write(root.resolve("slot-limit.txt"), Integer.toString(n).getBytes(StandardCharsets.UTF_8));
         } catch (IOException e) {
             System.err.println("无法保存槽位上限：" + e.getMessage());
         }
     }
 
-    static Slot meta(String romName, int slot) {
+    public static Slot meta(String romName, int slot) {
         Path path = path(romName, slot);
         if (!Files.isRegularFile(path)) {
             return Slot.empty(slot);
@@ -80,7 +85,7 @@ final class SaveStore {
         }
     }
 
-    static byte[] readState(String romName, int slot) throws IOException {
+    public static byte[] readState(String romName, int slot) throws IOException {
         try (DataInputStream in = new DataInputStream(Files.newInputStream(path(romName, slot)))) {
             if (in.readInt() != MAGIC || in.readInt() != VERSION) {
                 throw new IOException("不是本模拟器槽位文件");
@@ -89,7 +94,7 @@ final class SaveStore {
             in.readUTF();
             int w = in.readInt();
             int h = in.readInt();
-            in.skipNBytes((long) w * h * 4);
+            skipFully(in, (long) w * h * 4);
             int n = in.readInt();
             byte[] state = new byte[n];
             in.readFully(state);
@@ -97,7 +102,7 @@ final class SaveStore {
         }
     }
 
-    static void write(String romName, int slot, byte[] state, int[] framebuffer, int width, int height)
+    public static void write(String romName, int slot, byte[] state, int[] framebuffer, int width, int height)
             throws IOException {
         Path path = path(romName, slot);
         Files.createDirectories(path.getParent());
@@ -117,11 +122,11 @@ final class SaveStore {
         }
     }
 
-    static String formatTime(long epochMs) {
+    public static String formatTime(long epochMs) {
         return TIME.format(Instant.ofEpochMilli(epochMs));
     }
 
-    static void verify() throws IOException {
+    public static void verify() throws IOException {
         Path old = root;
         root = Files.createTempDirectory("nes-slots");
         try {
@@ -149,6 +154,18 @@ final class SaveStore {
         }
     }
 
+    private static void skipFully(DataInputStream in, long bytes) throws IOException {
+        byte[] dump = new byte[8192];
+        long left = bytes;
+        while (left > 0) {
+            int n = in.read(dump, 0, (int) Math.min(left, dump.length));
+            if (n < 0) {
+                throw new IOException("槽位文件截断");
+            }
+            left -= n;
+        }
+    }
+
     private static Path path(String romName, int slot) {
         return root.resolve(key(romName)).resolve("slot-" + slot + ".sav");
     }
@@ -161,13 +178,13 @@ final class SaveStore {
         return s.isEmpty() ? "rom" : s;
     }
 
-    static final class Slot {
-        final int index;
-        final boolean empty;
-        final long time;
-        final int width;
-        final int height;
-        final int[] thumb;
+    public static final class Slot {
+        public final int index;
+        public final boolean empty;
+        public final long time;
+        public final int width;
+        public final int height;
+        public final int[] thumb;
 
         Slot(int index, boolean empty, long time, int width, int height, int[] thumb) {
             this.index = index;
